retail-media/v2024.10/docs/metrics-and-dimensions.mdx
---
title: "Metrics and Dimensions"
---

1. Guides for Retail Media API
2. [Demand Side Analytics (DSP)](/retail-media/v2024.10/docs/analytics)

## **Report Metrics**

Most metrics are available for every report types with the exception of certain metrics that are only available at one report level or for certain report types. The table below breaks the the report level and report types where each metrics is found.

<Info>
  ### Report Types

  Some metrics and dimensions are available only through flexible reporting. For these fields use the `metrics []` or `dimensions []` array in the request to filter data.
</Info>

| Metric                    | Report Level        | Report Types                                                                                                                            | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| ------------------------- | ------------------- | --------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `impressions`             | Campaign, Line-item | summary, pageType keyword, product category, product, served category, environment, capout, Flexible reporting                          | **Campaign Report Types** Measured when an ad creative renders on a page; an ad creative may display products from one or more campaigns; each unique campaign is counted once; used in all report types except for Product and Product Category reports**Line-Item Report Types** Measured when an ad creative renders on a page; an ad creative may display products from one or more line items; each unique line item is counted once; used in all report types except for Product and Product Category reports**Product, Product Category and Served Category Report Types** Measured when a promoted product is rendered on the page, whether as a single ad creative or as one of many products in an ad creative; each product is counted once separately💡 **More Info**: [Product & Placement Impression](https://help.retailmedia.criteo.com/kb/guide/en/product-placement-impressions-Yg9vyLMSMS/Steps/2492962) Help Center article |
| `clicks`                  | Campaign, Line-item | summary, pageType, keyword, product category, product, served category, environment, capout, Flexible reporting                         | Measured when an ad creative is clicked on, which incurs a cost to the advertiser for open auction campaigns                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| `spend`                   | Campaign, Line-item | summary, pageType, keyword, product category, product, served category, environment, capout, Flexible reporting                         | For open auctions campaigns, the total cost of clicks for the advertiser, inclusive of platform fees                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| `attributedSales`         | Campaign, Line-item | summary, pageType, keyword, product-category, product, attributedTransactions, served category, environment, capout, Flexible reporting | A sale that was a direct result of your marketing campaign (in accordance with your attribution rules). Also, a measure of the conversions of your campaign.Formula: Sum of all Sales- \*Importan&#x74;**: \_Sales are deduplicated between off-site and on-site, however the Criteo API will only report on** on-site campaigns only\*\*. A sale can only be attributed to one line item across all campaigns.\_                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| `attributedUnits`         | Campaign, Line-item | summary, pageType, keyword, product category, product, attributedTransactions, served category, environment, Flexible reporting         | Units sold attributed to a click or impression. Attributed units are exclusive of.`assistedUnits` meaning assisted units are not counted in the attribution.- \*Example:\*\* *If a shopper purchases one order of two products, the number of Attributed Units is two.*                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| `attributedOrders`        | Campaign, Line-item | summary, pageType, keyword, product category, product, environment, Flexible reporting                                                  | Orders or buy transactions attributed to a click or an impression (can vary based on your attribution settings)- \*Example:\*\* *If a shopper purchases one order of two products, the number of Attributed Orders is one.*                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| `ctr`                     | Campaign, Line-item | summary, pageType, keyword, product category, product, served category, environment, capout, Flexible reporting                         | The percentage of shoppers who clicked an ad rendered on a page.**Product and Product Category Report Types** Formula: `clicks` / `productImpressions`**All other report types** Formula: `clicks` / `placementImpressions`💡 **Note:** there are two types of impressions that can be measured to know the success of your ads: `placementImpressions` and `productImpressions`. Preferred deals have placement impressions, while open auction uses product impressions. For more info: [Product & Placement Impression](https://help.retailmedia.criteo.com/kb/guide/en/product-placement-impressions-Yg9vyLMSMS/Steps/2492962) Help Center article                                                                                                                                                                                                                                                                                          |
| `cpc`                     | Campaign, Line-item | summary, pageType, keyword, product category, product, served category, environment, capout, Flexible reporting                         | The average cost you are paying per click. Available for On-site Sponsored Products campaigns only. Value is inclusive of platform fees.Formula: `spend` / `clicks`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| `cpm`                     | Campaign, Line-item | summary, pageType, keyword, product category, product, served category, environment, Flexible reporting                                 | Calculated as the total cost of impressions served divided by the total number of impressions.Onsite display campaigns only                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| `roas`                    | Campaign, Line-item | summary, pageType, keyword, product category, product, served category, environment, capout, Flexible reporting                         | A measurement of the revenue you will receive for every unit of currency you spend on ads. ROAS can vary based on your attribution settings. This metric is inclusive of platform fees.Formula: `attributedSales` / `spend`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| `cpo`                     | Campaign, Line-item | summary, pageType, keyword, product category, product, Flexible reporting                                                               | The amount spent on advertising that resulted in a purchase order from a shopper.Formula: `spend` / `attributedOrders`- \*Example: \*\**If you spend \$100 on advertising and you have 5 orders placed, the CPO would be \$20 (\$100/5)*                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| `assistedSales`           | Campaigns Line-item | summary, pageType, keyword, product category, product, served category, environment, Flexible reporting                                 | Sales revenue attributed to a click or impression of all the ads that appeared on a page within the chosen attribution window (specified at the campaign level) but were not determined to be the `attributedSales` (the last ad before the customer purchased).💡 More Info: [Demand Side Metrics](https://help.retailmedia.criteo.com/kb/guide/en/demand-side-metrics-WUR7bClZmA/Steps/1033012,1033080,1033082) Help Center article                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| `assistedUnits`           | Campaign Line-item  | summary, pageType, keyword, product category, product, served category, environment, Flexible reporting                                 | The number of events that occurred that helped generated a sale. Assisted units are excluded from `attributedUnits`. This means its not counted in the attributed units calculation.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| `uniqueVisitors`          | Campaign, Line-item | summary, environment, Flexible reporting                                                                                                | The number of distinct shoppers exposed to an ad within the reporting period. Each shopper is counted once using the retailer cookie ID.Criteo uses retailer cookie IDs to identify users across sessions on the same device. Each ID can last up to a year, provided the user does not clear their cookies.💡 More Info: [Demand Side Metrics](https://help.retailmedia.criteo.com/kb/guide/en/demand-side-metrics-WUR7bClZmA/Steps/1033012,1033080,1033082) Help Center article                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| `frequency`               | Campaign, Line-item | summary, environment, Flexible reporting                                                                                                | An average representing how often an impression has been shown to the same user                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| `videoViews`              | Line-item           | Flexible reporting only                                                                                                                 | The number of times at least 50% of the video ad appeared for at least 2 seconds (MRC standard).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| `videosStarted`           | Line-item           | Flexible reporting only                                                                                                                 | The percentage of videos printed that started playing.- \*Formula\*\*: Video Starts / Placement Impressions                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| `videosPlayedTo25`        | Line-item           | Flexible reporting only                                                                                                                 | The number of times one of your videos played to at least 25% of its duration.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `videosPlayedTo50`        | Line-item           | Flexible reporting only                                                                                                                 | The number of times one of your videos played to at least 50% of its duration.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `videosPlayedTo75`        | Line-item           | Flexible reporting only                                                                                                                 | The number of times one of your videos played to at least 75% of its duration.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `videosPlayedTo100`       | Line-item           | Flexible reporting only                                                                                                                 | The number of times one of your videos played to 100% of its duration.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| `videoPlayingRate`        | Line-item           | Flexible reporting only                                                                                                                 | The average played percentage of a started video.- \*Formula\*\*: Sum of Quartiles x 0.25 / (4 x Video starts)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `videoCompletionRate`     | Line-item           | Flexible reporting only                                                                                                                 | The percentage of started videos that played for their entire duration.- \*Formula\*\*: Number of videos that played to completion / Total number of videos started \* 100                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `videosStarted`           | Line-item           | Flexible reporting only                                                                                                                 | The number of times one of your video ads started playing.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `videoStartingRate`       | Line-item           | Flexible reporting only                                                                                                                 | The percentage of videos printed that started playing.Formula: Video Starts / Placement Impressions                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| `videoPlayingRate`        | Line-item           | Flexible reporting only                                                                                                                 | The average played percentage of a started video.Formula: Sum of Quartiles x 0.25 / (4 x Video starts)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| `videoMuted`              | Line-item           | Flexible reporting only                                                                                                                 | The number of times users clicked the “mute” button on your video.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| `videoUnmuted`            | Line-item           | Flexible reporting only                                                                                                                 | The number of times users clicked the “unmute” button on your video.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| `videoResumed`            | Line-item           | Flexible reporting only                                                                                                                 | The number of times users activated the resume control after the creative had been stopped and paused.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| `videoPaused`             | Line-item           | Flexible reporting only                                                                                                                 | The number of times users activated the pause control on the video.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| `videoViewability`        | Line-item           | Flexible reporting only                                                                                                                 | The percentage of video ads that were considered viewable. At least 50% of the ad’s pixels must be visible on the screen for at least two continuous seconds (MRC standard). Requires OMID support.Formula: Viewable Impressions / Placement Impressions                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| `winRate`                 | Campaign, Line-item | Flexible reporting only                                                                                                                 | The number of times Sponsored Product SKUs won in the auction. Win Rate is calculated by taking the number of total impressions won and dividing it by the total number of impressions that were bid on.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| `capoutHour`              | Campaign, Line-item | Capout                                                                                                                                  | The average hour of the day where line item(s) capped outThe hour is based on the time-zone of the account. If an account setting is set to USA Eastern Time, then a 6:00 pm means the line item caps out at 6:00pm ESTIf there was no capout on that day, the report will report “No cap-out”If line item was not in flight, and no data is present then report will present a dash "-"                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| `capoutMissedTraffic`     | Campaign, Line-item | Capout                                                                                                                                  | The number of page loads where the advertiser did not display an impression after capping out / total number of page loads                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `capoutMissedSpend`       | Campaign, Line-item | Capout                                                                                                                                  | The estimated missed spend that advertiser would have received if they didn’t cap-out early. If the campaign is Sponsored Product or Onsite Display thenFormula = (`Missed traffic`) / (1-`Missed traffic`) x Spend                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| `capoutMissedClicks`      | Campaign, Line-item | Capout                                                                                                                                  | The estimated number of clicks the advertiser could have received if they had not cap out earlyFormula: Total Numb of Clicks at the time of capout x (`Missed Traffic`)/ (1 - `Missed Traffic`)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| `capoutMissedImpressions` | Campaign, Line-item | Capout                                                                                                                                  | The estimated number of impressions the advertiser could have received if they had not reached capout early.Formula: Total Numb. of Impressions at the time of capout x (`Missed Traffic`)/ (1 - `Missed Traffic`)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| `capoutMissedSales`       | Campaign, Line-item | Capout                                                                                                                                  | The estimated missed revenue the advertiser could have received if they had not cap out earlyFormula: Total Revenue x (`Missed Traffic`)/ (1 - `Missed Traffic`)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |

## **Report Dimensions**

* Available dimensions vary by report type

* The Attributed Transactions report is documented separately below

| Dimension             | Report Level        | Report Types                                                                                                                            | Description                                                                                                                                                                                                                                                                                                                                                                                              |
| --------------------- | ------------------- | --------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `date`                | Campaign, Line-item | summary, pageType, keyword, product category, product, served category, environment, capout, Flexible reporting                         | The date of when events occurred for the requested line-item or campaign report. If there are no results to show for the requested dates, the API will return no results.* \*Note:\*\* Dates are reflected based on the API call requested time zone. Dates are also reported at either the campaign level or line-item level.                                                                           |
| `hour`                | Campaign, Line-item | Flexible reporting only                                                                                                                 | The hour of when events occurred for the requested line-item or campaign report. If there are no results to show for the requested dates, the API will return no results.                                                                                                                                                                                                                                |
| `accountId`           | Campaign, Line-item | Flexible reporting only                                                                                                                 | The account Id of the requested report                                                                                                                                                                                                                                                                                                                                                                   |
| `campaignId`          | Campaign, Line-item | summary, pageType, keyword, product category, product, attributedTransactions, served category, environment, capout, Flexible reporting | The campaign ID of the requested report                                                                                                                                                                                                                                                                                                                                                                  |
| `campaignName`        | Campaign, Line-item | summary, pageType, keyword, product category, product, attributedTransactions, served category, environment, capout, Flexible reporting | The Campaign name of the request report                                                                                                                                                                                                                                                                                                                                                                  |
| `campaignTypeName`    | Campaign, Line-item | summary, pageType, keyword, product category, product, attributedTransactions, served category, environment, Flexible reporting         | The type of of campaign. Available options are `Open Auction` or `Preferred Deals`* \*Note\*\*: Offsite is not yet available through the API                                                                                                                                                                                                                                                             |
| `lineItemId`          | Line-item           | summary, pageType, keyword, product category, product, attributedTransactions, served category, environment, Flexible reporting         | Line item ID of the requested report                                                                                                                                                                                                                                                                                                                                                                     |
| `lineItemName`        | Line-item           | summary, pageType, keyword, product category, product, attributedTransactions, served category, environment, Flexible reporting         | Line item name of the requested report                                                                                                                                                                                                                                                                                                                                                                   |
| `retailerId`          | Line-item           | summary, pageType, keyword, product category, product, served category, capout, Flexible reporting                                      | Retailer ID of the retailer of the line item served on                                                                                                                                                                                                                                                                                                                                                   |
| `retailerName`        | Line-item           | summary, pageType, keyword, product category, product, attributedTransactions, served category, capout, Flexible reporting              | Retailer name of the retailer the line item served on                                                                                                                                                                                                                                                                                                                                                    |
| `pageTypeName`        | Campaign, Line-item | pageType, attributedTransactions, Flexible reporting                                                                                    | Type of retailer web page an ad creative rendered on. Current page types include home, category, productDetail, confirmation, checkout, merchandising, deals, and search.                                                                                                                                                                                                                                |
| `environment`         | Campaign, Line-item | environment, Flexible reporting                                                                                                         | Type of environment an ad creative rendered on, such as web, mobile, and app                                                                                                                                                                                                                                                                                                                             |
| `salesChannel`        | Campaign, Line-item | Flexible reporting only                                                                                                                 | Sales channel the attributed purchase was made through.Available options are: `online` for sales attributed to an ad that was served and purchased online or in-app`offline` for sales to an ad that was served online but purchase in store.                                                                                                                                                            |
| `keyword`             | Campaign, Line-item | keyword, Flexible reporting                                                                                                             | Keyword or phrase used to land on the search page where an ad creative rendered. This is the [normalized keyword](/retail-media/v2024.10/docs/onsite-sponsored-products#submited-keywords) submitted by the advertisers. Criteo also refers this as the `stemmed search term`                                                                                                                                                    |
| `searchTerm`          | Campaign, Line-item | Flexible reporting only                                                                                                                 | Searched keyword or phrase used by the shopper on a retailer's website.                                                                                                                                                                                                                                                                                                                                  |
| `searchTermTargeting` | Campaign, Line-item | Flexible reporting only                                                                                                                 | Manual targeting happens when you add keywords to your campaign. Automatic targeting happens when the AI engine associates a keyword to your campaign.* \*Manual targeting \*\*– If the search term matches either a keyword entered on CMax or one of the variations created from stemming a raw CMax keyword
* \*Automatic targeting\*\* – All other search terms added via the automated keyword tool |
| `searchTermType`      | Campaign, Line-item | Flexible reporting only                                                                                                                 | The match type used to associate a search term and keywords entered for the campaign.* \*Entered \*\*– If the search term matches exactly what has been entered manually by the Commerce Max user
* \*Searched \*\*– The search term matches what was searched by a shopper on the retailer's website
* \*Null \*\*– For all other use cases corresponding to automatic keywords                         |
| `servedCategory`      | Campaign, Line-item | served category, Flexible reporting                                                                                                     | Category of the browser page the were ads served on.* \*Note\*\*: Served category reports will be specific to the retailer while all other category report types will have standardized categories across brands and retailers.                                                                                                                                                                          |
| `advProductCategory`  | Campaign, Line-item | product category, product, attributedTransactions, Flexible reporting                                                                   | Category of the product advertised.                                                                                                                                                                                                                                                                                                                                                                      |
| `taxonomyBreadcrumb`  | Campaign, Line-item | Flexible reporting only                                                                                                                 | The category breadcrumb of the product using retailer product taxonomies (L1, L2, L3 etc.)                                                                                                                                                                                                                                                                                                               |
| `advProductId`        | Campaign, Line-item | product, attributedTransactions, Flexible reporting                                                                                     | Advertised product ID; this references the same ID used in [Catalogs](/retail-media/v2024.10/docs/catalogs#catalog-product-attributes)                                                                                                                                                                                                                                                                                           |
| `advProductName`      | Campaign, Line-item | product, attributedTransactions, Flexible reporting                                                                                     | Advertised product name                                                                                                                                                                                                                                                                                                                                                                                  |
| `brandId`             | Campaign, Line-item | product                                                                                                                                 | Advertised product brand ID                                                                                                                                                                                                                                                                                                                                                                              |
| `brandName`           | Campaign, Line-item | product                                                                                                                                 | Advertised product brand name; names are standardized across retailers                                                                                                                                                                                                                                                                                                                                   |
| `daypartingScheduled` | Campaign, Line-item | capout                                                                                                                                  | A binary indicator informs the user whether the ad event had dayparting enabled or disabled at the time of the recorded event.`On`: dayparting was active during the capout period`Off`: dayparting was inactive during the capout period                                                                                                                                                                |

## **Attributed Transactions Report Dimensions & Metrics**

* Note this report contains historical data, so you can always determine how each sale was attributed according to the data and rules enforced at the time.

* Keep this in mind when comparing data against other reports - properties such as `advProductCategory` could drift as product categories may evolve.

* All columns are available for both the **campaign** and **line-item** levels

<Info>
  ### Help Center Article

  For more details on attribution check out our Help Center articles

  1. [Attribution 101](https://help.retailmedia.criteo.com/kb/guide/en/about-attribution-sZH1iCyq5L/Steps/1034909)
  2. [Campaign Attribution Settings](https://help.retailmedia.criteo.com/kb/guide/en/campaign-attribution-settings-kOp98ICINU/Steps/878890)
</Info>

| Column Name                         | Column Type | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | Example                    |
| ----------------------------------- | ----------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------- |
| `advDate`                           | Dimension   | The date the ad was delivered                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | 10/21/2022                 |
| `advHour`                           | Dimension   | The hour the ad was delivered                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | 16                         |
| `purchasedDate`                     | Dimension   | The date the attributed product was purchased                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | 2022                       |
| `purchasedHour`                     | Dimension   | The hour the attributed product was purchased                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | 10/21/2022                 |
| `daysDifference`                    | Dimension   | The difference in hours divided by 24. The metric will display the number of days between when the ad was served and the attributed purchase occurred.- \*Example\*\*: *an 11pm ad leading to a 1 am sale the next day would have a 0 day difference*                                                                                                                                                                                                                                                                                          | 2                          |
| `campaignId`                        | Dimension   | Campaign ID of the requested report                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | 1234567890                 |
| `campaignName`                      | Dimension   | Campaign name of the request report                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | *Fall Promotional Sale*    |
| `lineItemId`                        | Dimension   | Line item ID of the requested report                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | 10987654321                |
| `lineItemName`                      | Dimension   | Line item name of the requested report                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | Fall Sale - Camping Gear   |
| `retailerName`                      | Dimension   | Retailer name of the retailer the line item served on                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | Camping Shop               |
| `pageTypeName`                      | Dimension   | Retailer page type where the ad was served. Page types include: `home`, `search`, `productDetail`, `category`, `confirmation`, `checkout`, `merchandising`, `deals`                                                                                                                                                                                                                                                                                                                                                                            | category                   |
| `keyword`                           | Dimension   | Keyword or phrase used to land on the search page where an ad creative was rendered                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                            |
| `advProductId`                      | Dimension   | Advertised product ID; this references the same ID used in [Catalogs](/retail-media/v2024.10/docs/catalogs#catalog-product-attributes)                                                                                                                                                                                                                                                                                                                                                                                                                                 | 426456                     |
| `advProductName`                    | Dimension   | Advertised product name                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | Camping Jacket, W small    |
| `advProductCategory`                | Dimension   | Category of product advertised; categories are standardized across brands and retailers, which may differ from retailer-specific categories                                                                                                                                                                                                                                                                                                                                                                                                    | camping > clothing > women |
| `advProductGtin`                    | Dimension   | Advertised product Global Trade Item Number (GTIN), if available; also known as European Article Number (EAN) or Universal Product Code (UPC)                                                                                                                                                                                                                                                                                                                                                                                                  |                            |
| `advProductMpn`                     | Dimension   | Advertised product Manufacturer Part Number (MPN), if available                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |                            |
| `purchasedProductId`                | Dimension   | Purchased product ID; this references the same ID used in [Catalogs](/retail-media/v2024.10/docs/catalogs#catalog-product-attributes)                                                                                                                                                                                                                                                                                                                                                                                                                                  | 426456                     |
| `purchasedProductName`              | Dimension   | Purchased product name                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |                            |
| `purchasedProductCategory`          | Dimension   | Category of product purchased; categories are standardized across brands and retailers, which may differ from retailer-specific categories                                                                                                                                                                                                                                                                                                                                                                                                     | Camping Jacket, W small    |
| `purchasedProductGtin`              | Dimension   | Purchased product Global Trade Item Number (GTIN), if available; also known as European Article Number (EAN) or Universal Product Code (UPC)                                                                                                                                                                                                                                                                                                                                                                                                   |                            |
| `purchasedProductMpn`               | Dimension   | Purchased product Manufacturer Part Number (MPN), if available                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |                            |
| `advEngagement`                     | Dimension   | Type of ad engagement the purchase was attributed to.Available options are: `imp` for impression or `click` for clicks                                                                                                                                                                                                                                                                                                                                                                                                                         | click                      |
| `advToPurchasedProductRelationship` | Dimension   | Attribution rule used to match the impression or click to a sale.Available options are: `same sku`, `same parent sku`, `same taxonomy`, `same brand`, `same seller`                                                                                                                                                                                                                                                                                                                                                                            | same sku                   |
| `salesChannel`                      | Dimension   | Sales channel the attributed purchase was made through.Available options are: `online` for sales attributed to an ad that was served and purchased online or in-app`offline` for sales to an ad that was served online but purchase in store.                                                                                                                                                                                                                                                                                                  | online                     |
| `attributionWindow`                 | Dimension   | Lookback click and view attribution window of the requested report. The attribution window is based on the parameters selected in the report API request. See [Get Started](/retail-media/v2024.10/docs/get-started)- \*Post-Click (C) lookback window
- \*7, 14, 30 days**Post-view (V) lookback window** 0, 1, 7, 14, 30 days- \*Example: \*\*A `C14V07` means that the click attribution (C) window was 14 days and view (V) attribution window was 7 days.
- \*Note\*\*: that the Post-View lookback window cannot be greater than the Post-Click lookback window. | C07V07                     |
| `attributedSales`                   | Metric      | Sales revenue attributed to a click or impression                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | 8.68                       |
| `attributedUnits`                   | Metric      | Units sold attributed to a click or impression                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | 1                          |

***

[Report Types](/retail-media/v2024.10/docs/report-types)

[Supply Side Analytics (SSP)](/retail-media/v2024.10/docs/supply-side-reporting-ssp)
